# investment

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  dca-tracker.yml  earnings-event.yml  stock-position.yml  thesis-review.yml  trade-log.yml
.github/workflows/: append-trade.yml  claude-mention.yml  dca-tracker-record.yml  dca-tracker.yml  earnings-recap.yml  earnings-watcher.yml  horizon-review.yml  issue-checkbox-tick.yml  risks-index-sync.yml  thesis-review.yml  update-dashboards.yml  watchlist-screen.yml  weekly-review.yml
docs/: METHODOLOGY.md  PROMPTS.md
portfolio/: allocation.yml  dca_history.json  horizon_plan.yml  trades.csv  watchlist.yml
portfolio/dashboards/: allocation.md  dca-flow.md  dca-pnl.md  upcoming-earnings.md
portfolio/positions/: ETN.md  HALO.md  HLNE.md  IDCC.md  MKL.md  P.md  VOO.md  _template.md
risks/: R-2026-04-001-hlne-institutional-ownership-thinning-am.yml  R-2026-04-001.md  R-2026-04-002-iran-hormuz-energy-shock-sustaining-elev.yml  R-2026-04-002.md  R-2026-04-003-halo-hypercon-near-term-royalty-growth-c.yml  R-2026-04-003.md  R-2026-04-004.md  R-2026-04-005.md  R-2026-04-006.md  R-2026-05-001.md  R-2026-05-002.md  R-2026-05-003.md  R-2026-05-004.md  R-2026-05-005.md  R-2026-05-006.md  R-2026-05-007.md  README.md
scripts/: append_trade.py  close_position.py  file_a_risk.py  file_a_scenario.py  record_dca_fills.py  render_dashboards.py  render_risks_index.py  render_upcoming_earnings.py  screen_candidate.py
tests/: test_models.py
(+20 files in other folders)
